# moderncpp-project-template

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  conanfile.py  conanfile.py.old  conanfile.txt  cppcheck_suppressions.txt
.dev/: Dockerfile
.github/: FUNDING.yml
.github/workflows/: build-shared.yml  build-static.yml
cmake/: clang_format.cmake  compiler_options.cmake  cpack.cmake  cppcheck.cmake  dependencies.cmake
project/: .clang-format  CMakeLists.txt
project/helloapp/: CMakeLists.txt
project/helloapp/src/: helloapp.cpp
project/hellolib/: CMakeLists.txt
project/hellolib/include/: hellolib.h
project/hellolib/src/: hellolib.cpp
project/hellolib/test/: hellolib_test.cpp
project/src/: hello.cpp
project/src/hellolib/: hellolib.cpp  hellolib.hpp
project/tests/: test_hello.cpp
test_package/: CMakeLists.txt  conanfile.py  usage_test.cpp
